--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/sFav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="This Portfolio site created using React.js"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Agustin Luparini || Portfolio</title>
+    <title>Final Programacion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
